--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "ZAP+",
-	"name": "ZAP+",
+	"short_name": "AltZap - Whatsapp AlternativaCard",
+	"name": "AltZap - Whatsapp AlternativaCard",
 	"icons": [
 		{
 			"src": "favicon.ico",
